--- a/package.json
+++ b/package.json
@@ -9,14 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.4",
+    "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.39.0"
   },
   "devDependencies": {
-    "@types/react": "17.0.29",
+    "@babel/core": "^7.15.5",
+    "@iconify/react": "^3.0.1",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-essentials": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/react": "^6.3.8",
+    "@types/react": "17.0.19",
+    "autoprefixer": "^10.3.7",
+    "babel-loader": "^8.2.2",
+    "babel-preset-react-app": "^10.0.0",
+    "css-loader": "^5.1.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
-    "typescript": "4.4.4"
+    "postcss": "^8.3.9",
+    "sass-loader": "^10",
+    "style-loader": "^2.0.0",
+    "tailwindcss": "^2.2.17",
+    "typescript": "4.4.2"
   }
 }
